--- a/config.example.toml
+++ b/config.example.toml
@@ -19,3 +19,4 @@ host = "localhost"
 port = 1234
 # model = "specific-model-name"  # Leave commented to use default model
 timeout = 120
+# context_limit = 8192  # Manual context window size (tokens). Required if LM Studio API doesn't expose it.
