--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,3 +56,8 @@ target-version = "py311"
 [tool.ruff.lint]
 select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
 ignore = ["E501"]
+
+[dependency-groups]
+dev = [
+    "pytest-cov>=7.0.0",
+]
